--- a/news.txt
+++ b/news.txt
@@ -1,15 +1,6 @@
 Заголовок=🔥 LAIRONIX HUB — ОБНОВЛЕНИЕ 10.12.2025 🔥
 Описание=
-• Добавлен Silent Aim 3.0 (самый точный, с предиктом и без лагов)
-• Добавлен оригинальный Silent Aim 
-• Vibe Mode — 4 новых атмосферы (Purple Night, Blood Red, Neon Green, Ocean Blue)
-• Rainbow FOV — радужный круг
-• Тёмный режим
-• Новые функции в World и Visuals
-• Всё работает НАВСЕГДА после включения
-• Никаких чужих имён — только laironix
-• Анти-лог, объявления с GitHub, чистый код
-
-Запускай Silent Aim по одному!
-Если не работает — жми ещё раз (2-3 раза)
-
+• Новые функции
+• Более стабильный аим 
+• Если не регает аим или что то не работает то пишите @tu2de 
+• или перезапустите функцию
